fix: Revert to static daily texts due to CSP restrictions

--- a/src/locales/pt.json
+++ b/src/locales/pt.json
@@ -328,17 +328,31 @@
     "version": "Versão",
     "developedBy": "Desenvolvido por",
     "changeLanguage": "Mudar Idioma",
+    "languageDescription": "Alterne entre português e crioulo cabo-verdiano",
     "theme": "Tema",
+    "themeDescription": "Escolha entre tema claro, escuro ou automático",
     "changeTheme": "Mudar tema",
     "light": "Claro",
     "dark": "Escuro",
     "system": "Sistema",
     "notifications": "Notificações",
+    "notificationsDescription": "Gerencie os lembretes e alertas do aplicativo",
+    "permissions": "Permissões",
+    "permissionsDescription": "Controle o acesso à câmera, microfone e localização",
+    "camera": "Câmera",
+    "microphone": "Microfone",
+    "location": "Localização",
+    "allowed": "Permitido",
+    "denied": "Negado",
     "offline": "Modo offline",
     "data": "Dados",
+    "dataDescription": "Exportar, importar ou limpar os seus dados",
     "export": "Exportar",
     "import": "Importar",
-    "reset": "Limpar tudo"
+    "reset": "Limpar tudo",
+    "appInfoDescription": "Informações sobre a versão e o desenvolvedor",
+    "currentLanguage": "Idioma atual",
+    "subtitle": "Configure a sua experiência no KBVLYON"
   },
   "ui": {
     "timer": "Cronômetro",
