fix: add missing 'practice' navigation translation for PT and KEA

--- a/src/locales/kea.json
+++ b/src/locales/kea.json
@@ -37,7 +37,8 @@
     "notes": "Notas",
     "about": "Konsernu",
     "scores": "Progresu",
-    "settings": "Konfigurasons"
+    "settings": "Konfigurasons",
+    "practice": "Prátika"
   },
   "home": {
     "title": "Prendi Kriolu pa Prédika",
