--- a/src/locales/pt.json
+++ b/src/locales/pt.json
@@ -37,7 +37,8 @@
     "notes": "Notas",
     "about": "Sobre",
     "scores": "Progresso",
-    "settings": "Configurações"
+    "settings": "Configurações",
+    "practice": "Prática"
   },
   "home": {
     "title": "Aprenda Cabo-verdiano para Pregação",
